<resources>
    <string name="app_name">JobFindApp</string>
    <string name="job_type">Job Type</string>
    <string name="offered_by">Offered By</string>
    <string name="phone_number">Phone Number</string>
    <string name="requirements">Requirements</string>
    <string name="estimated_pay">Estimated Pay</string>
    <string name="location">Location</string>
    <string name="slots_available">Slots Available</string>
    <string name="enter_details">ENTER JOB DETAILS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="categories">Categories:</string>
    <string name="categories1">CATEGORIES:</string>
</resources>
