<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="76dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvJobtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableStart="@drawable/ic_jobtype"
                android:drawableLeft="@drawable/ic_jobtype"
                android:padding="5dp"
                android:text="@string/job_type" />

            <TextView
                android:id="@+id/tvOfferedby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableStart="@drawable/ic_offered_by"
                android:drawableLeft="@drawable/ic_offered_by"
                android:padding="5dp"
                android:text="@string/offered_by" />

            <TextView
                android:id="@+id/tvPhonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:padding="5dp"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/tvRequirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableStart="@drawable/ic_requirements"
                android:drawableLeft="@drawable/ic_requirements"
                android:padding="5dp"
                android:text="@string/requirements" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/tvEstimatedpay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableStart="@drawable/ic_money"
                android:drawableLeft="@drawable/ic_money"
                android:padding="5dp"
                android:text="@string/estimated_pay" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:padding="5dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tvSlotsavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:drawableStart="@drawable/ic_slotsavailable"
                android:drawableLeft="@drawable/ic_slotsavailable"
                android:padding="5dp"
                android:text="@string/slots_available" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="right"
            android:gravity="right"
            android:paddingLeft="22dp"
            android:paddingRight="30dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:src="@drawable/ic_inquiries" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:src="@drawable/ic_like_red_24dp" />


            <ImageButton
                android:id="@+id/addUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:src="@drawable/ic_add_black_24dp" />


        </LinearLayout>


    </LinearLayout>





</androidx.cardview.widget.CardView>



